--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </section>
         <!-- START - Footer section -->
         <section>
-            <div class="rounded-xl max-w-7xl mx-auto bg-gradient-to-br from-slate-100 to-white my-12">
+            <div class="rounded-xl max-w-7xl mx-auto bg-gradient-to-br from-slate-50 to-white my-12">
                 <div class="p-8 text-center">
                     <h1 class="mt-2 text-2xl text-slate-600 font-bold">Many thanks for the developers of this tools</h1>
                 </div>
@@ -163,17 +163,21 @@
         </section>
         <!-- END - FOOTER section -->
         <section>
-            <div class="rounded-md max-w-7xl mx-auto bg-gradient-to-br from-slate-900 to-slate-500 text-white my-12">
-                <h1 class="text-3xl text-white font-semibold p-4 m-2 text-center">About</h1>
+            <div class="rounded-md max-w-7xl mx-auto bg-gradient-to-br from-slate-900 to-slate-500 text-white my-6">
+                <h1 class="text-4xl text-white font-black p-4 m-2 text-center">About</h1>
                 <div class="grid grid-cols-3 gap-4 text-center p-4">
                     <div>
+                        <p class="mb-4"><a href="mailto:nekodev@yahoo.com">E-Mail: tesztbt@yahoo.com</a></p>
+                        <p class="mb-4"><a href="tel:003620555555">Mobil: +36-20-555-5555</a></p>
                         <p class="mb-4">Link</p>
-                        <p class="mb-4">Link</p>
-                        <p class="mb-4">Link</p>
-                        <p class="mb-4">Link</p>
+                        <p class="mb-4"></p>
                     </div>
-                    <div>Link</div>
-                    <div>Link</div>
+                    <div>
+                        <p class="mb-4">Teszt Bt.</p>
+                        <p class="mb-4">Cg. 01-01-000.000</p>
+                        <p class="mb-4">1055 Budapest, Pelda utca 12.</p>
+                    </div>
+                    <div>&copy; 2023</div>
                 </div>
             </div>
 
