--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p class="p-2">2023-06-05</p>
                     </div>
                 </div>
-                <h1 class="mt-2 text-2xl text-slate-600 font-bold hover:underline"><a href="#">This is a new blog
+                <h1 class="mt-2 text-2xl text-slate-600 font-bold hover:underline"><a href="./src/article.html">This is a new blog
                         post</a></h1>
                 <!-- Short description of the post -->
                 <p
